[package]
name = "kiyo"
version = "0.0.6"
edition = "2021"
authors = ["Lauda Carly <lauda@nel.re"]
description = "Lightweight compute shader playground"
readme = "README.md"
repository = "https://github.com/n-e-l/kiyo"
license = "GPL-3.0-only"
keywords = ["compute", "vulkan", "render", "engine", "art"]
categories = ["rendering::engine"]

[dependencies]
cen = { git = "https://github.com/n-e-l/cen.git", rev = "3a2bc52416fc6a37a38367f104e0798a16ad9969" }
cpal = "0.13.4"
glam = "0.28.0"
log = "0.4.22"
bytemuck = { version = "1.17.0", features = ["derive"] }
rodio = "0.20.1"
png = "0.17.16"

[dev-dependencies]

[[example]]
name = "simple-render"

[[example]]
name = "blur-pass"

[[example]]
name = "with-audio"

[[example]]
name = "clear"

[[example]]
name = "feedback"
